--- a/templates/index.html
+++ b/templates/index.html
@@ -1,84 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Horror House</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,600&family=Open+Sans:wght@400;600&family=Poppins&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/materialize.css') }}">
 
+
   <link rel="icon" type="image/ico" href="/static/images/favicon.ico">
-  
-  
+
+
 </head>
+
 <body>
-  <nav class="white" role="navigation">
+  <div class="navbar-fixed">
+  <nav class="navbar-colour" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="/index.html" class="brand-logo">
-        <img class="logo-size" src="static/images/horror-house-logo.png" alt="Horror House book reviews logo">
+        <img class="logo-size logo-position" src="static/images/horror-house-logo.png"
+          alt="Horror House book reviews logo">
       </a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a class="nav-link-style" href="#">Navbar Link</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Navbar Link</a></li>
       </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons mobile-icon">add_box</i></a>
     </div>
   </nav>
+</div>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <h1 class="header center">You're now entering the Horror House</h1>
+
+        <div class="row">
+          <div class="col s12 m6 card-margin">
+            <div class="card card-colour darken-1">
+              <div class="card-content">
+                <span class="card-title">
+                  <h2>Card Title</h2>
+                </span>
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+            </div>
+          </div>
         </div>
+
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="/" id="download-button" class="btn-large waves-effect waves-dark lighten-1 btn-styles">Get
+            Started</a>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="static/images/horror-background.jpg" alt="Unsplashed background img 1">
+    </div>
   </div>
 
 
-  <div class="container">
+  <div class="icon-sec-background">
     <div class="section">
 
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center icon-styles"><i class="material-icons">book</i></h2>
+            <h3 class="center">Speeds up development</h3>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p>We did most of the heavy lifting for you to provide a default stylings that incorporate our custom
+              components. Additionally, we refined animations and transitions to provide a smoother experience for
+              developers.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h2 class="center icon-styles"><i class="material-icons">favorite_border</i></h2>
+            <h3 class="center">User Experience Focused</h3>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework
+              that incorporates components and animations that provide more feedback to users. Additionally, a single
+              underlying responsive system across all platforms allow for a more unified user experience.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center icon-styles"><i class="material-icons">keyboard</i></h2>
+            <h3 class="center">Easy to work with</h3>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users
+              get started. We are also always open to feedback and can answer any questions a user may have about
+              Materialize.</p>
           </div>
         </div>
       </div>
@@ -87,77 +120,88 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
-
-  <footer class="page-footer teal">
+  <footer class="page-footer">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <p>“I am all in a sea of wonders. I doubt; I fear; I think strange things, 
+            which I dare not confess to my own soul.”
+            ― Bram Stoker, Dracula</p>
+        </div>  
 
-
-        </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+        <a id="form-btn" class="btn-large waves-effect waves-dark lighten-1 btn-styles"
+            aria-label="Open contact form">Contact Us</a>
+        </div>
+
+        <!--Hidden Contact Form-->
+
+        <div class="hide-form contact-modal" id="modal">
+
+          <div class="contact-pop">
+
+            <span id="close-form">&times;</span>
+
+            <form aria-label="Send us your comments, ideas, or feedback" id="contactForm">
+
+              <h1 class="mobile-heading form-heading">Tell us more!</h1>
+              <br>
+              <label for="name" class="form-font label-display mobile-label">Name</label>
+              <input type="text" id="name" name="from_name" class="label-width" aria-label="Name" required>
+              <br>
+              <br>
+              <label for="email" aria-label="Email Address" class="form-font label-display mobile-label">Email</label>
+              <input id="email" type="email" name="from_email" placeholder="example@email.com" class="label-width"
+                aria-label="Email Address" required>
+              <br>
+              <br>
+              <label for="enquiry" class="form-font label-display">Send us your comments, ideas, or feedback</label>
+              <br>
+              <textarea id="enquiry" name="enquiry" cols="45" rows="8" aria-label="Fill in comments in this text area"
+                required></textarea>
+              <br>
+              <br>
+              <div class="g-recaptcha" data-sitekey="6Leuc8QaAAAAAMDFGUGuXcyZTQf0DL8--7p9LQbJ"></div>
+              <br>
+              <input type="submit" value="Send" onsubmit="return sendMail(this);" class="btn btn-outline-light"
+                aria-label="Submit this form">
+            </form>
+          </div>
+        </div>
+
+        <div class="col l3 s12">
+          <h5 class="white-text">Our Socials</h5>
+          <ul class="footer-links">
+
+            <li>
+              <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener">
+                <i class="fab fa-facebook-f" aria-hidden="true"></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://www.instagram.com" aria-label="Instagram" target="_blank" rel="noopener">
+                <i class="fab fa-instagram" aria-hidden="true"></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://www.twitter.com/" aria-label="Twitter" target="_blank" rel="noopener">
+                <i class="fab fa-twitter" aria-hidden="true"></i>
+              </a>
+            </li>
+
           </ul>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
+
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by Christine GK Designs
       </div>
     </div>
+
   </footer>
 
 
@@ -165,6 +209,10 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="static/js/materialize.js"></script>
   <script src="static/js/init.js"></script>
+  
 
-  </body>
+  <script src=static/js/contact-email.js></script>
+
+</body>
+
 </html>
