--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,10 +17,15 @@ nav .nav-wrapper {
 
 .nav-link-style {
   color: #F5F3F4!important;
-    font-size: 22px;
+    font-size: 2.0rem;
     font-family: 'Crimson text', sans-serif;
     font-weight: 500;
     text-shadow: 1px 1px 1px #660708;
+}
+
+.btn-toggle {
+  margin-left: 70%;
+  position: fixed;
 }
 
 a:active {
@@ -34,17 +39,16 @@ h1 {
   text-shadow: 1px 1px 6px black;
 }
 
-h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow: 1px 1px 2px black;
-  color: #F5F3F4;
+.card-title {
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-size: 2.8rem !important;
+  padding-bottom: 3%;
 }
 
 h3 {
     font-size: 2rem !important;
     font-family: Arial;
-    text-shadow: 1px 1px 2px black;
-  color: #F5F3F4;
+    color: #F5F3F4;
 }
 
 .card-margin {
@@ -53,21 +57,14 @@ h3 {
   margin-bottom: 3%;
 }
 
-.card-colour {
-  background-color: #3e4c59 !important;
-}
-
 .btn-styles {
-  background-color: #E84A4D !important;
-  border-radius: 25px  !important;
+  
   font-family: 'Crimson Text';
   text-transform: capitalize  !important;
-  font-size: 22px  !important;
-  border: #F5F3F4 0.75px solid !important
+  font-size: 1.8rem  !important;
 }
 
 .icon-sec-background {
-  background-color: #3e4c59 !important;
   max-width: 100% !important;
 }
 
@@ -80,20 +77,23 @@ h3 {
   font-size: 26px;
 }
 
-.page-footer {
-  background-color: #E84A4D !important;
-}
-
 ul li {
   float:left;
   display:inline;
   padding-left: 10px;
-  font-size: 20px;
-  color: #F5F3F4;
+  font-size: 2.0rem;
 }
 
 a i {
   color: #161214;
+}
+
+.social-links-position {
+  padding-left: 5% !important;
+}
+
+.contact-button-position {
+  padding-top: 2% !important;
 }
 
 
@@ -149,6 +149,28 @@ a i {
   width: 35%;
 }
 
+@media only screen and (max-width : 800px) {
+  h1 {
+    font-size: 3.6rem !important;
+  }
+}
+
+@media only screen and (max-width : 600px) {
+  h1 {
+    font-size: 2.8rem !important;
+  }
+
+  .card-margin {
+    margin-left: 0% !important;
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+  
+.card-title {
+  font-size: 2.4rem !important;
+}
+}
+
 /* Custom Stylesheet */
 /**
  * Use this file to override Materialize files so you can update
@@ -165,13 +187,7 @@ nav .brand-logo {
 p {
   line-height: 2rem;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  text-shadow: 1px 1px 2px black;
-  color: #F5F3F4;
-}
-
-.sidenav-trigger {
-  color: #26a69a;
+  font-size: 1.4rem;
 }
 
 .parallax-container {
