--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -12,7 +12,7 @@
     background-color: #161214 !important;
   }
 
-  h2 {
+  .card-title {
     color: #F5F3F4;
     text-shadow: 1px 1px 2px black !important;
   }
