Update nav link styles The colour of the nav links was updated to be in each of the dark/light mode css files to fix a bug with the colour not switching as expected

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -12,6 +12,10 @@
     background-color: #161214 !important;
   }
 
+  .nav-link-style {
+    color: #F5F3F4!important;
+  }
+
   .card-title {
     color: #F5F3F4;
     text-shadow: 1px 1px 2px black !important;
