Create content on Reviews page from base template by adding cards Materialize cards were added and customised to match the style of the site. Stand in temporary images were added for each card.

--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -4,8 +4,175 @@
 
 
 {% block main_heading %}
-        <h1 class="header center">Read, rate, and review 
-            your favourite horror stories</h1>
+        <h1 class="header center">Featured Titles</h1>
 {% endblock %}
 
+{% block parallax_content %}
+<div class="row">
 
+    <div class="col s12 m6 l4">
+      <div class="card large card-colour">
+        <div class="card-image">
+          <img src="static/images/doctor-sleep.png">
+        </div>
+        <div class="card-content center">
+          <p>Doctor Sleep
+              <br>
+              by Stephen King
+          </p>
+          <div class="center review-btn-position">
+            <a href="/" id="download-button" 
+            class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+              Read more
+              </a>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+
+    <div class="col s12 m6 l4">
+        <div class="card large card-colour">
+          <div class="card-image">
+            <img src="static/images/bog-of-cats.jpeg">
+          </div>
+          <div class="card-content center">
+            <p>By the Bog of Cats
+              <br>
+              by Marina Carr 
+            </p>
+            <div class="center review-btn-position">
+              <a href="/" id="download-button" 
+              class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+                Read more
+                </a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+      <div class="col s12 m6 l4">
+        <div class="card large card-colour">
+          <div class="card-image">
+            <img src="static/images/let-right-one-in.jpeg">
+          </div>
+          <div class="card-content center">
+            <p>Let the Right One In
+              <br>
+              John Ajvide Lindqvist
+            </p>
+            <div class="center review-btn-position">
+              <a href="/" id="download-button" 
+              class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+                Read more
+                </a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+  </div>
+{% endblock %}
+
+{% block content %}
+
+<div class="icon-sec-background">
+  <div class="review-container">
+
+    
+    <div class="row">
+      
+      <div class="col s12 m6 l3">
+        <div class="card large card-colour z-depth-5">
+          <div class="card-image">
+            <img src="static/images/doctor-sleep.png">
+          </div>
+          <div class="card-content center">
+            <p>Doctor Sleep
+                <br>
+                by Stephen King
+            </p>
+            <div class="center review-btn-position">
+              <a href="/" id="download-button" 
+              class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+                Read more
+                </a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+
+      <div class="col s12 m6 l3">
+        <div class="card large card-colour z-depth-5">
+          <div class="card-image">
+            <img src="static/images/doctor-sleep.png">
+          </div>
+          <div class="card-content center">
+            <p>Doctor Sleep
+                <br>
+                by Stephen King
+            </p>
+            <div class="center review-btn-position">
+              <a href="/" id="download-button" 
+              class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+                Read more
+                </a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+
+      <div class="col s12 m6 l3">
+        <div class="card large card-colour z-depth-5">
+          <div class="card-image">
+            <img src="static/images/doctor-sleep.png">
+          </div>
+          <div class="card-content center">
+            <p>Doctor Sleep
+                <br>
+                by Stephen King
+            </p>
+            <div class="center review-btn-position">
+              <a href="/" id="download-button" 
+              class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+                Read more
+                </a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+
+      <div class="col s12 m6 l3">
+        <div class="card large card-colour z-depth-5">
+          <div class="card-image">
+            <img src="static/images/doctor-sleep.png">
+          </div>
+          <div class="card-content center">
+            <p>Doctor Sleep
+                <br>
+                by Stephen King
+            </p>
+            <div class="center review-btn-position">
+              <a href="/" id="download-button" 
+              class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+                Read more
+                </a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+{% endblock %}
