--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <h1 class="header center">You're now entering the Horror House</h1>
 {% endblock %}
 
-{% block basic_card %}
+{% block parallax_content %}
 <div class="row">
   <div class="col s12 m6 card-margin">
     <div class="card card-colour darken-1">
@@ -22,8 +22,7 @@
     </div>
   </div>
 </div>
-{% endblock %}
-{% block homepage_button %}
+
 <div class="row center">
   <a href="/" id="download-button" class="btn-large waves-effect waves-dark lighten-1 btn-styles">Get
       Started
