--- a/templates/base.html
+++ b/templates/base.html
@@ -63,10 +63,8 @@
       <h1>{% block main_heading %}{% endblock %}</h1>
 
 
-      {% block basic_card %}
-      {% endblock %}
-
-      {% block homepage_button %}
+      {% block parallax_content %}
+      
       {% endblock %}
 
       <br><br>
