Create login page > The login page was created using the base template and a materialize card. I also connected the page to the python programme.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,11 @@ p {
   font-size: 1.4rem;
 }
 
+a#login-link {
+  text-decoration: underline !important;
+  color: #F07F83 !important;
+}
+
 .btn-styles {
   
   font-family: 'Crimson Text';
@@ -97,6 +102,13 @@ p {
 .review-container {
   padding: 5%;
 }
+
+/* Login Page */
+
+.login-padding {
+  padding-top: 8%;
+}
+
 
 /* Footer */
 
