--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
         <ul class="right hide-on-med-and-down">
 
           <li><a class="nav-link-style" href="{{ url_for('reviews') }}">Reviews</a></li>
+          <li><a class="nav-link-style" href="{{ url_for('login') }}">Login</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
