--- a/templates/login.html
+++ b/templates/login.html
@@ -8,35 +8,34 @@
 
 {% block parallax_content %}
 <div class="row">
-    <div class="col s12 m6 card-margin">
-      <div class="card medium card-colour darken-1">
+    <form class="col s12 m6 card-margin" method="POST" action="{{ url_for('login') }}">
+      <div class="card medium card-colour login-card-padding">
         <div class="card-content">
         
           <div class="row">
             <div class="input-field col s12">
-              <input id="email" type="email" class="validate">
-              <label for="email">Email</label>
+              <i class="material-icons prefix login-icon-light">account_box</i>
+              <input id="username" type="text" name="username" class="validate">
+              <label for="username">Username</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
-              
-              <input id="password" type="password" class="validate">
-              
+              <i class="material-icons prefix login-icon-light">enhanced_encryption</i>
+              <input id="password" type="password" name="password" class="validate">
               <label for="password">Password</label>
             </div>
         </div>
           <div class="center">
-            <a href="/" id="download-button" 
-            class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
-              Login
-              </a>
+              <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" 
+              type="submit" name="action">Login
+              </button>
           </div>
          
-          <p class="center login-padding" id="light-mode-font">Don't have an account yet? Sign up 
+          <p class="center login-link-padding" id="light-mode-font">Don't have an account yet? Sign up 
               <a id="login-link" href="/">here</a>.</p>
         </div>
       </div>
-    </div>
+    </form>
   </div>
 {% endblock %}
