--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,8 +105,12 @@ a#login-link {
 
 /* Login Page */
 
-.login-padding {
+.login-link-padding {
   padding-top: 8%;
+}
+
+.login-card-padding {
+  padding: 5%;
 }
 
 
