--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -61,3 +61,21 @@
   ul li {
     color: #F5F3F4;
   }
+
+  /* Materialize input styles for forms*/
+
+/* label color */
+.input-field label {
+  color: #F5F3F4 !important;
+}
+
+/* valid color */
+.input-field input[type=text].valid {
+  border-bottom: 1px solid #F07F83 !important;
+  box-shadow: 0 1px 0 0 #000;
+}
+
+/* icon prefix focus color */
+.input-field .prefix.active {
+  color: #F07F83 !important;
+}
