Format code on the index page to clean up the template

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <div class="card card-colour darken-1">
       <div class="card-content">
         <span class="card-title">
-        Card Title
+          Card Title
         </span>
         <p id="light-mode-font">I am a very simple card. I am good at containing small bits of information.
           I am convenient because I require little markup to use effectively.</p>
@@ -24,9 +24,10 @@
 </div>
 
 <div class="row center">
-  <a href="{{ url_for('reviews') }}" id="download-button" class="btn-large waves-effect waves-dark lighten-1 btn-styles">Get
-      Started
-    </a>
+  <a href="{{ url_for('reviews') }}" id="download-button"
+    class="btn-large waves-effect waves-dark lighten-1 btn-styles">Get
+    Started
+  </a>
 </div>
 {% endblock %}
 
@@ -73,4 +74,3 @@
   </div>
 </div>
 {% endblock %}
-
