Create sign-up page and add the link to the python programme and base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
 
           <li><a class="nav-link-style" href="{{ url_for('reviews') }}">Reviews</a></li>
           <li><a class="nav-link-style" href="{{ url_for('login') }}">Login</a></li>
+          <li><a class="nav-link-style" href="{{ url_for('sign_up') }}">Sign Up</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
