--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -4,21 +4,13 @@
     background-color: #E84A4D;
   }
   
-  .nav-link-style {
-    color: #F5F3F4!important;
-  } 
-  
-  a:active {
-    background-color: #161214 !important;
-  }
-
-  .nav-link-style {
-    color: #F5F3F4!important;
-  }
-
-  .card-title {
+  nav ul a.nav-link-style{
     color: #F5F3F4;
-    text-shadow: 1px 1px 2px black !important;
+  } 
+
+  .home-card-title {
+    color: #F5F3F4;
+    text-shadow: 1px 1px 2px black;
   }
 
   h3 {
@@ -31,8 +23,8 @@
     text-shadow: 1px 1px 2px black;
   }  
   
-  .card-colour {
-    background-color: #3e4c59 !important;
+  .card.card-colour {
+    background-color: #3e4c59;
   }
 
   .btn-toggle {
