--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
 
 {% block parallax_content %}
 <div class="row">
-  <div class="col s12 m6 card-margin">
-    <div class="card card-colour darken-1">
+  <div class="col s12 m12">
+    <div class="card card-colour card-margin darken-1">
       <div class="card-content">
-        <span class="card-title">
+        <span class="home-card-title">
           Card Title
         </span>
         <p id="light-mode-font">I am a very simple card. I am good at containing small bits of information.
@@ -40,7 +40,7 @@
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center icon-styles"><i class="material-icons">book</i></h2>
-          <h3 class="center">Speeds up development</h3>
+          <h3 class="center custom-font">Speeds up development</h3>
 
           <p>We did most of the heavy lifting for you to provide a default stylings that incorporate our custom
             components. Additionally, we refined animations and transitions to provide a smoother experience for
@@ -51,7 +51,7 @@
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center icon-styles"><i class="material-icons">favorite_border</i></h2>
-          <h3 class="center">User Experience Focused</h3>
+          <h3 class="center custom-font">User Experience Focused</h3>
 
           <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework
             that incorporates components and animations that provide more feedback to users. Additionally, a single
@@ -62,7 +62,7 @@
       <div class="col s12 m4">
         <div class="icon-block">
           <h2 class="center icon-styles"><i class="material-icons">keyboard</i></h2>
-          <h3 class="center">Easy to work with</h3>
+          <h3 class="center custom-font">Easy to work with</h3>
 
           <p class="light">We have provided detailed documentation as well as specific code examples to help new users
             get started. We are also always open to feedback and can answer any questions a user may have about
