Fix login/sign-up page card formatting The formatting for the card section on these pages was fixed to have correct css inheritance on desktop view. Also fixed some errors in my html on the sign up page where divs weren't properly closed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,16 +109,16 @@ a#login-link {
 /* Login Page */
 
 .login-link-padding {
-  padding-top: 8%;
+  padding-bottom: 3%;
 }
 
-.login-card-padding {
-  padding: 5%;
+.card.login-card-padding {
+  margin: 3% 10% 10% 10%;
+  padding: 3% 10% 3% 10%;
 }
 
 /* Sign Up Page */
-.card-margin2 {
-  margin-left: 25% !important;
+.card.card-margin2 {
   margin-top: 2%;
 }
 
