--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -8,45 +8,48 @@
 
 {% block parallax_content %}
 <div class="row">
-    <form class="col s12 m6 card-margin2" method="POST" action="{{ url_for('login') }}">
-      <div class="card large card-colour login-card-padding">
-        <div class="card-content">
-            <div class="row">
-                <div class="input-field col s6">
-                    <i class="material-icons prefix login-icon-light">border_color</i>
-                  <input id="first_name" type="text" class="validate">
-                  <label for="first_name">First Name</label>
-                </div>
-                <div class="input-field col s6">
-                  <input id="last_name" type="text" class="validate">
-                  <label for="last_name">Last Name</label>
-                </div>
-            </div>
-        
+  <div class="col s12 l12">
+    <div class="card large card-colour login-card-padding card-margin2">
+      <div class="card-content">
+
+        <p class="center login-link-padding" id="light-mode-font">Don't have an account yet? Login 
+          <a id="login-link" href="/">here</a>.</p>
+        <form method="POST" action="{{ url_for('sign_up') }}">
           <div class="row">
-            <div class="input-field col s12">
-              <i class="material-icons prefix login-icon-light">account_box</i>
-              <input id="username" type="text" name="username" class="validate">
-              <label for="username">Username</label>
-            </div>
+              <div class="input-field col s6">
+                  <i class="material-icons prefix login-icon-light">border_color</i>
+                <input id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
           </div>
-          <div class="row">
-            <div class="input-field col s12">
-              <i class="material-icons prefix login-icon-light">enhanced_encryption</i>
-              <input id="password" type="password" name="password" class="validate">
-              <label for="password">Password</label>
-            </div>
-        </div>
-          <div class="center">
-              <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" 
-              type="submit" name="action">Create account
-              </button>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix login-icon-light">account_box</i>
+            <input id="username" type="text" name="username" class="validate">
+            <label for="username">Username</label>
           </div>
-         
-          <p class="center login-link-padding" id="light-mode-font">Don't have an account yet? Login 
-              <a id="login-link" href="/">here</a>.</p>
         </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix login-icon-light">enhanced_encryption</i>
+            <input id="password" type="password" name="password" class="validate">
+            <label for="password">Password</label>
+          </div>
       </div>
-    </form>
+        <div class="center">
+            <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" 
+            type="submit" name="action">Create account
+            </button>
+        </div>
+      </form>
+      
+      </div>
+    </div>
   </div>
+</div>
 {% endblock %}
