--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -4,7 +4,7 @@
 
 
 {% block main_heading %}
-        <h1 class="header center">Featured Titles</h1>
+        <h1 class="custom-font header center">Featured Titles</h1>
 {% endblock %}
 
 {% block parallax_content %}
