--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 
 {% block main_heading %}
-<h1 class="header center">You're now entering the Horror House</h1>
+<h1 class="custom-font header center">You're now entering the Horror House</h1>
 {% endblock %}
 
 {% block parallax_content %}
