--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %} Login | Horror House {% endblock %}
 
 {% block main_heading %}
-<h1 class="header center">Login to your account</h1>
+<h1 class= "custom-font header center">Login to your account</h1>
 {% endblock %}
 
 {% block parallax_content %}
