--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -9,7 +9,7 @@
 {% block parallax_content %}
 <div class="row">
   <div class="col s12 l12">
-    <div class="card large card-colour login-card-padding card-margin2">
+    <div class="card xlarge card-colour signup-card-padding">
       <div class="card-content">
 
         <p class="center login-link-padding" id="light-mode-font">Don't have an account yet? Login
