--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,9 +191,22 @@ div.col.l3.m6.contact-button-position {
   width: 35%;
 }
 
+ul#nav-mobile.sidenav {
+  background-color: #E84A4D;
+  padding-top: 25%;
+}
+
+.sidenav li a.mobile-nav-style {
+  color:#D3D3D3;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.0rem;
+}
+
 /* Media Queries */
 
+
 @media only screen and (max-width : 800px) {
+
   h1.custom-font {
     font-size: 3.6rem;
   }
